adding book collections

--- a/kitaplar.html
+++ b/kitaplar.html
@@ -2,7 +2,7 @@
 layout: page
 title: Kitap Notları
 ---
-{% for cookie in site.kitaplar %}
+{% for kitap in site.kitaplar %}
 	<div class="kitap">
 		<h2><a href="{{ kitap.url }}">{{ kitap.title }}</a></h2>
 	</div>
